style.css
/* Basic Style */
body {
  background-color: #f8f8f8;
  color: #333;
  font-family: Lato, sans-serif;
}
.todo-logo {
  width: 500px;
  margin: 0 auto;
  display: block;
  text-align: right;
}
.todo-logo img {
  width: 100%;
}
.todo-logo__link {
  font-family: fantasy, cursive;
}

@media (max-width:768px) {
  .todo-logo { 
    text-align: center;
  }
}

.todo-wrapper{
  display: block;
  width: 500px;
  margin: 0 auto 0;
}
.todo__list__item_name,
.todo__list-completed__item_name {
  width: 56%;
  display: inline-block;
  flex-grow: 1;
}
.todo__item_create_input-block {
  display: flex;
}
ul {
  margin: 0;
  padding: 0px;
}
li,
h3 {
  list-style: none;
}
input,button{
  outline: none;
}
button {
  background: none;
  border: 0px;
  color: #888;
  font-size: 15px;
  width: 60px;
  font-family: Lato, sans-serif;
  cursor: pointer;
}
button:hover {
  color: #3a3a3a;
}
/* Heading */
h3,
.todo__item_create_name {
  color: #333;
  font-weight: 700;
  font-size: 15px;
  border-bottom: 2px solid #333;
  padding: 30px 0 10px;
  margin: 0;
  text-transform: uppercase;
}
input[type="text"] {
  margin: 0;
  font-size: 18px;
  line-height: 18px;
  height: 21px;
  padding: 0 9px;
  border: 1px solid #ddd;
  background: #FFF;
  border-radius: 6px;
  font-family: Lato, sans-serif;
  color: #888;
}
input[type="text"]:focus {
  color: #333;
}


/* New Task */
.todo__item_create_name {
  display: block;
  margin: 0 0 20px;
}
.todo__item_create_input {
  width: 318px;
  flex-grow: 1;
}

/* Task list */
.todo__list-actives li,
.todo__list-completed li {
  overflow: hidden;
  padding: 20px 0;
  border-bottom: 1px solid #eee;

  display: flex;
  justify-content: space-between;
  align-items: center;
}
li > * {
  vertical-align: middle;
}

li > input[type="checkbox"] {
  margin: 0 10px;
}
.todo__list__item_name,
.todo__list-completed__item_name {
  padding-left: 10px;
  box-sizing: border-box;
  font-size: 18px;
  width: 226px;
}
li > input[type="text"] {
  width: 226px;
}
.todo__list__btn-delete img {
  height: 2em;
  transform: rotateZ(45deg);
  transition: transform 200ms ease-in;
}
.todo__list__btn-delete img:hover {
  transform: rotateZ(0);

}

/* Completed */
.todo__list-completed .todo__list__item_name{
  text-decoration: line-through;
  color: #888;
}

/* Edit Task */
.todo__list__item_name_input{
  display: none;
  flex-grow: 1;
}

.editMode .todo__list__item_name_input {
  display: inline-block;
  width: 224px;
}

.editMode .todo__list__item_name {
  display: none;
}

